2006-11-04  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Translate 'alis' OSA types to Ruby file paths.

2006-10-30  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  sample/*.rb:
	Changed the "require 'rubygems'..." expressions to make them compatible
	with Ruby 1.8.2. 

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Added support to convert Hash objects to OSA 'record' types.

2006-09-28  James MacAulay  <jmacaulay@gmail.com>

	* src/lib/rbosa.rb:
	- Reverted to 0.0.11 handling of 'comp' objects (unpacked as Quad integers 
	  again now) ;
	- Added handling for 'sing' objects (they're floats) ;
	- Added handling for when __type__ is 'type' and __data__ is 'msng'.
	  It seems that this is meant to suggest "missing" values, since this is 
	  exactly where they pop up in iTunes track properties (in an uninitialized
	  long_description, for example)...so I just made them turn into nils.

2006-10-28  Jean-Pierre M.  <jeanpierre@gmail.com>

	* sample/*.rb:
	Try to require 'rubygems' in samples, as RubyOSA may have been
	installed as a gem.

2006-10-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* TODO:
	Updated.

	* src/lib/rbosa.rb:
	Fixed generated code for methods taking an enumeration-like parameter.
	This fixes #6350.

2006-10-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/iChat_uptime.rb:
	Better uptime string. Suggested by Tieg Zaharia.

=== RubyOSA 0.1.0 ===

2006-10-25  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Made the OSA <-> Ruby conversion hooks open.
	Patch was slightly modified by Laurent Sansonetti.

2006-10-25  Aaron Patterson  <aaron.patterson@gmail.com>

	* src/lib/rbosa.rb:
	Fall-back using REXML if libxml-ruby is not present.
	Patch was slightly modified by Laurent Sansonetti.

2006-10-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added Aaron.

	* rubyosa.gemspec,
	  bin/rdoc-osa,
	  rdoc-osa.rb:
	- Added RubyGems specification file ;
	- Moved the rdoc-osa tool to ./bin ;